ADD: universal selector

--- a/css-basics/selectors.html
+++ b/css-basics/selectors.html
@@ -11,5 +11,7 @@
     <!-- Class and Id selectors -->
     <h1 class="heading">Hello World</h1>
     <p id="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi magni corrupti voluptas delectus ex, eligendi repellat hic ipsa, laudantium fugiat reiciendis ipsum magnam dolore soluta repudiandae nemo! Quas, enim atque.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto libero suscipit pariatur praesentium obcaecati tempore ipsum molestias reprehenderit. Aliquam sequi a obcaecati vero et deserunt nostrum quos earum esse dolore!</p>
 </body>
 </html>
