--- a/css-basics/selectors.html
+++ b/css-basics/selectors.html
@@ -13,5 +13,7 @@
     <p id="para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi magni corrupti voluptas delectus ex, eligendi repellat hic ipsa, laudantium fugiat reiciendis ipsum magnam dolore soluta repudiandae nemo! Quas, enim atque.</p>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto libero suscipit pariatur praesentium obcaecati tempore ipsum molestias reprehenderit. Aliquam sequi a obcaecati vero et deserunt nostrum quos earum esse dolore!</p>
+    <button>Hello</button>
+    <input type="text">
 </body>
 </html>
