--- a/css-basics/external-css-example.html
+++ b/css-basics/external-css-example.html
@@ -10,5 +10,7 @@
 <body>
     <p id="para">Hello World</p>
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas reiciendis, hic et blanditiis quod quas eligendi. Sit, quis maxime? Commodi, illo vel? Est expedita maiores consequuntur impedit quos sunt praesentium?</div>
+
+    <div id="border-red">Bordered Text</div>
 </body>
 </html>
