ADD: background image

--- a/css-basics/external-css-example.html
+++ b/css-basics/external-css-example.html
@@ -12,5 +12,11 @@
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas reiciendis, hic et blanditiis quod quas eligendi. Sit, quis maxime? Commodi, illo vel? Est expedita maiores consequuntur impedit quos sunt praesentium?</div>
 
     <div id="border-red">Bordered Text</div>
+
+    <div id="text-with-img">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni provident quia commodi quo quibusdam corrupti neque reiciendis repellendus exercitationem quos praesentium dolorem maxime eum, odio iusto repellat porro modi consequatur.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis totam, deserunt incidunt ullam impedit hic neque exercitationem, minus dolorum quidem corporis saepe alias aperiam rerum molestias, tempore laboriosam. Corrupti, amet.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, ipsum facilis repellat, ullam soluta fugiat itaque alias omnis dignissimos molestias eligendi labore suscipit, aliquid debitis? Praesentium corrupti earum tenetur quia.
+    </div>
 </body>
 </html>
