--- a/css-basics/outline.html
+++ b/css-basics/outline.html
@@ -47,16 +47,16 @@
     <p class="solid">A solid outline</p>
     <p class="double">A double outline</p>
     <p class="groove">
-      A groove outline. The effect depends on the outline-color value.
+      A groove outline.
     </p>
     <p class="ridge">
-      A ridge outline. The effect depends on the outline-color value.
+      A ridge outline.
     </p>
     <p class="inset">
-      An inset outline. The effect depends on the outline-color value.
+      An inset outline.
     </p>
     <p class="outset">
-      An outset outline. The effect depends on the outline-color value.
+      An outset outline.
     </p>
   </body>
 </html>
