--- a/css-basics/animation-2.html
+++ b/css-basics/animation-2.html
@@ -10,9 +10,9 @@ div {
   position: relative;
   animation-name: example;
   animation-duration: 3s;
-  animation-delay: 1s;
-  animation-iteration-count: 4;
-  animation-direction: reverse;
+  animation-delay: .1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 @keyframes example {
