--- a/css-basics/assignment/homepage.html
+++ b/css-basics/assignment/homepage.html
@@ -13,11 +13,10 @@
         <div class="logo">Tourism</div>
         <div class="menu">
           <ul>
-            <li><a href="#" class="active">Homepage</a></li>
-            <li><a href="#">Attractions</a></li>
+            <li><a href="attractions.html">Attractions</a></li>
             <li><a href="#">About us</a></li>
             <li><a href="#">Images</a></li>
-            <li><a href="#">Contact us</a></li>
+            <li><a href="https://timesinternet.in/">Contact us</a></li>
           </ul>
         </div>
       </div>
