--- a/css-basics/assignment/homepage.html
+++ b/css-basics/assignment/homepage.html
@@ -15,6 +15,7 @@
           <ul>
             <li><a href="attractions.html">Attractions</a></li>
             <li><a href="#">About us</a></li>
+            <li><a href="enquiry-form.html">Enquiry</a></li>
             <li><a href="#">Images</a></li>
             <li><a href="https://timesinternet.in/">Contact us</a></li>
           </ul>
