--- a/css-basics/assignment/enquiry-form.html
+++ b/css-basics/assignment/enquiry-form.html
@@ -14,19 +14,19 @@
         <form id="form" action="">
           <div class="form-item">
             <label for="name">Name :</label>
-            <input type="text" name="name" id="name" />
+            <input type="text" name="name" id="name" required/>
           </div>
           <div class="form-item">
             <label for="email">Email :</label>
-            <input type="email" name="email" id="email" />
+            <input type="email" name="email" id="email" required />
           </div>
           <div class="form-item">
             <label for="phone">Phone :</label>
-            <input type="text" name="phone" id="phone" />
+            <input type="text" name="phone" id="phone" minlength="10"  maxlength="10" required/>
           </div>
           <div class="form-item">
             <label for="message">Enquiry</label>
-            <textarea name="message" id="message" cols="30" rows="7"></textarea>
+            <textarea name="message" id="message" cols="30" rows="7" required maxlength="500"></textarea>
           </div>
           <div class="form-item">
             <input type="submit" value="Submit" id="submit" />
